Update README.md with troubleshooting for Lombok and Java compatibility issues